--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="oatmeal">#F7F6FF</color>
+    <color name="blue">#0000FC</color>
+    <color name="skyblue">#78C1FF</color>
+    <color name="navy">#000063</color>
+    <color name="dark">#272727</color>
 </resources>
