--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,6 +9,7 @@
 
 
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="300dp"
         android:layout_height="500dp"
         android:background="@drawable/logrebg"
@@ -23,109 +24,140 @@
 
 
     <EditText
-        android:id="@+id/edtEmail"
+        android:id="@+id/etEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:layout_marginTop="108dp"
+        android:ems="9"
         android:hint="이메일을 입력하세요"
         android:inputType="textEmailAddress"
         android:textSize="15sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="233dp" />
+        app:layout_constraintEnd_toStartOf="@+id/btnConfirmID"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/edtName"
+        android:id="@+id/etName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="15"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:ems="14"
         android:hint="성함을 입력하세요"
         android:inputType="textEmailAddress"
         android:textSize="15sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="281dp" />
+        app:layout_constraintBottom_toTopOf="@+id/etChildName"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/etEmail"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/edtChildName"
+        android:id="@+id/etChildName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="15"
+        android:layout_marginBottom="10dp"
+        android:ems="14"
         android:hint="관리할 아동의 성함을 입력하세요"
         android:inputType="textEmailAddress"
         android:textSize="15sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="331dp" />
+        app:layout_constraintBottom_toTopOf="@+id/etPwd"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/edtPwd"
+        android:id="@+id/etPwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="15"
+        android:layout_marginBottom="20dp"
+        android:ems="14"
         android:hint="비밀번호를 입력하세요"
         android:inputType="textPassword"
         android:textSize="15sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="382dp" />
+        app:layout_constraintBottom_toTopOf="@+id/etPwdCheck"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/edtRePwd"
+        android:id="@+id/etPwdCheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="15"
+        android:layout_marginBottom="120dp"
+        android:ems="14"
         android:hint="비밀번호를 한번 더 입력하세요"
         android:inputType="textPassword"
         android:textSize="15sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="432dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        tools:ignore="MissingConstraints" />
 
-    <ImageView
-        android:id="@+id/btnConfirm"
+    <Button
+        android:id="@+id/btnConfirmID"
         android:layout_width="90dp"
         android:layout_height="25dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="20dp"
         android:layout_weight="1"
         android:background="@drawable/btnconfirm"
         android:clickable="true"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="250dp"
-        tools:layout_editor_absoluteY="240dp" />
+        app:layout_constraintBottom_toTopOf="@+id/etName"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.88"
+        tools:ignore="MissingConstraints" />
 
-    <ImageView
+    <Button
         android:id="@+id/btnRegister"
         android:layout_width="210dp"
         android:layout_height="40dp"
         android:layout_margin="8dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/bigregister"
         android:clickable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="525dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/etPwdCheck"
+        tools:ignore="MissingConstraints" />
 
-    <ImageView
-        android:id="@+id/imgRegister"
-        android:layout_width="150dp"
-        android:layout_height="45dp"
-        android:layout_weight="1"
-        android:background="@drawable/joinbtn_2"
 
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="190dp"
-        tools:layout_editor_absoluteY="157dp" />
 
-    <ImageView
-        android:id="@+id/imgLogin"
-        android:layout_width="150dp"
-        android:layout_height="45dp"
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="140dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="40dp"
         android:layout_weight="1"
         android:background="@drawable/loginbtn_2"
         android:clickable="true"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="157dp" />
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        tools:ignore="MissingConstraints" />
+    <Button
+        android:id="@+id/imgRegister"
+        android:layout_width="140dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="28dp"
+        android:clickable="false"
+        android:layout_weight="1"
+        android:background="@drawable/joinbtn_2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        tools:ignore="MissingConstraints" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
