--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    tools:context=".CategoryActivity"
     >
 
     <androidx.recyclerview.widget.RecyclerView
@@ -15,7 +15,8 @@
         android:layout_marginEnd="1dp"
         android:layout_marginTop="20dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        tools:listitem="@layout/item_category_recycler">
 
     </androidx.recyclerview.widget.RecyclerView>
 
