--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -20,7 +20,7 @@
             android:background="@drawable/backbtn"
             />
         <TextView
-            android:id="@+id/categorytoolbar"
+            android:id="@+id/tvCategoryName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
