--- a/app/src/main/res/layout/activity_child_category.xml
+++ b/app/src/main/res/layout/activity_child_category.xml
@@ -20,7 +20,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/categorytoolbar"
+            android:id="@+id/tvCategoryName"
             android:text="카테고리"
             android:textSize="20sp"
             android:textStyle="bold"
