--- a/app/src/main/res/layout/activity_guardianmain.xml
+++ b/app/src/main/res/layout/activity_guardianmain.xml
@@ -19,12 +19,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img"
+        app:layout_constraintTop_toBottomOf="@+id/ivProfile"
         app:layout_constraintVertical_bias="0.102"
         tools:ignore="MissingConstraints" />
 
     <ImageView
-        android:id="@+id/img"
+        android:id="@+id/ivProfile"
         android:layout_width="85dp"
         android:layout_height="85dp"
         android:layout_marginStart="5dp"
