--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -104,7 +104,7 @@
         android:gravity="right"/>
 
     <TextView
-        android:id="@+id/tvCharacteristic"
+        android:id="@+id/tvContent"
         android:layout_width="400dp"
         android:layout_height="200dp"
         app:layout_constraintEnd_toEndOf="parent"
