--- a/app/src/main/res/layout/activity_write_post.xml
+++ b/app/src/main/res/layout/activity_write_post.xml
@@ -96,11 +96,10 @@
         android:id="@+id/ivPhoto"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_above="@+id/edtCharacteristic"
-        android:layout_below="@+id/photoButton"
+        android:layout_below="@+id/edtTitle"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_toEndOf="@+id/soundButton" />
+        android:layout_marginTop="30dp"
+        android:layout_toEndOf="@+id/photoButton" />
 
     <TextView
         android:id="@+id/soundtext"
@@ -136,7 +135,7 @@
         android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/edtCharacteristic"
+        android:id="@+id/edtContent"
         android:layout_width="230dp"
         android:layout_height="150dp"
         android:layout_below="@+id/soundButton"
@@ -152,7 +151,7 @@
         android:id="@+id/btnEnd"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_below="@+id/edtCharacteristic"
+        android:layout_below="@+id/edtContent"
         android:layout_alignStart="@+id/imageView2"
 
         android:layout_alignEnd="@+id/imageView2"
